--- a/blocks/page.css
+++ b/blocks/page.css
@@ -52,14 +52,18 @@
   width: 24px;
   grid-area: button;
   margin: 0 0 0 18px;
+  border: 0;
 }
 
 .profile__add-button {
-  background: transparent url(../images/Add\ Button-non-hover.svg) center
-    no-repeat;
-  width: 150px;
-  height: 50px;
+  background: transparent url(../images/Vector.svg) center no-repeat;
+  min-width: 150px;
+  min-height: 50px;
   margin-left: auto;
+  padding: 0;
+  border: 2;
+  border-color: #fff;
+  border-radius: 2px;
 }
 
 .profile__title {
@@ -90,6 +94,7 @@
 
 .cards {
   font-style: normal;
+  padding: 0;
 }
 
 .card__list {
@@ -98,6 +103,7 @@
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
   margin: 0;
+  padding: 47px 0 0;
 }
 
 .card {
@@ -117,10 +123,14 @@
   display: flex;
   background-color: #fff;
   color: #000;
-  padding: 25px 20px 20px 25px;
+  padding: 25px 30px 20px 20px;
   align-items: center;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.card__text {
+  margin: 0;
 }
 
 .card__like-button {
@@ -128,4 +138,69 @@
   height: 18px;
   width: 21px;
   margin-left: auto;
+  border: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .header {
+    margin: 28px 167px 0 27px;
+  }
+
+  .header__image {
+    width: 126px;
+  }
+
+  .line__header {
+    margin: 32px 0 0;
+  }
+
+  .profile {
+    /* background-color: pink; */
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .profile__image {
+    margin-bottom: 50px;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+    padding: 0 0 36px;
+  }
+
+  .profile__title {
+    color: #fff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin: 27px 0 14px;
+  }
+
+  .profile__add-button {
+    margin: 30px;
+    min-width: 282px;
+    min-height: 50px;
+  }
+
+  .profile__edit-button {
+    margin: 0 0 0 10px;
+    align-items: center;
+  }
+
+  .card__list {
+    padding: 250px 0 0;
+  }
 }
