--- a/blocks/page.css
+++ b/blocks/page.css
@@ -6,7 +6,6 @@
 
 .page__section {
   max-width: 880px;
-  max-height: 120px;
   width: 100%;
   position: relative;
   margin: 0 auto;
@@ -15,204 +14,5 @@
 .page__content {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-}
-
-.header {
-  margin-top: 45px;
-}
-
-.line__header {
-  color: #fff;
-  width: 100%;
-  height: 1px;
-  opacity: 0.7;
-  margin: 41px 0 0;
-  background: #545454;
-}
-
-.profile {
-  display: flex;
-  align-items: center;
-  padding: 40px 0 0;
-}
-
-.profile__info {
-  display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
-  align-items: center;
-}
-
-.profile__edit-button {
-  background: transparent url(../images/Edit\ Button.svg) center no-repeat;
-  height: 24px;
-  width: 24px;
-  grid-area: button;
-  margin: 0 0 0 18px;
-  border: 0;
-}
-
-.profile__add-button {
-  background: transparent url(../images/Vector.svg) center no-repeat;
-  min-width: 150px;
-  min-height: 50px;
-  margin-left: auto;
-  padding: 0;
-  border: 2;
-  border-color: #fff;
-  border-radius: 2px;
-}
-
-.profile__title {
-  font-size: 42px;
-  line-height: 48px;
-  font-weight: 500;
-  grid-area: title;
-  margin: 0;
-}
-
-.profile__description {
-  font-size: 18px;
-  line-height: 22px;
-  font-weight: 400;
-  grid-area: description;
-  margin: 0;
-  padding: 7px 0 0;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.profile__image {
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-  background-position: center;
-  margin: 0 24px 0 0;
-}
-
-.cards {
-  font-style: normal;
-  padding: 0;
-}
-
-.card__list {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, 282px);
-  grid-gap: 20px 17px;
-  margin: 0;
-  padding: 47px 0 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.card__description {
-  display: flex;
-  background-color: #fff;
-  color: #000;
-  padding: 25px 30px 20px 20px;
-  align-items: center;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.card__text {
-  margin: 0;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.card__like-button {
-  background: transparent url(../images/like-active.svg) center no-repeat;
-  height: 18px;
-  width: 21px;
-  margin-left: auto;
-  border: 0;
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-@media screen and (max-width: 480px) {
-  .header {
-    margin: 28px 167px 0 27px;
-  }
-
-  .header__image {
-    width: 126px;
-  }
-
-  .line__header {
-    margin: 32px 0 0;
-  }
-
-  .profile {
-    /* background-color: pink; */
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .profile__image {
-    margin-bottom: 50px;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    padding: 0 0 36px;
-  }
-
-  .profile__title {
-    color: #fff;
-    text-align: center;
-    font-family: Inter;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    margin: 27px 0 14px;
-  }
-
-  .profile__add-button {
-    margin: 30px;
-    min-width: 282px;
-    min-height: 50px;
-  }
-
-  .profile__edit-button {
-    margin: 0 0 0 10px;
-    align-items: center;
-  }
-
-  .card__list {
-    padding: 250px 0 0;
-  }
+  padding: 0 15px;
 }
