--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -66,3 +66,66 @@
   background-position: center;
   margin: 0 24px 0 0;
 }
+
+@media screen and (max-width: 880px) {
+  .profile__title {
+    font-size: 30px;
+    font-style: normal;
+  }
+
+  .profile__edit-button {
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    padding: 39px 0 30px;
+    max-width: 480px;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .profile__image {
+    margin: 0 0 27px;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+    padding: 14px 0 36px;
+    max-width: 282px;
+  }
+
+  .profile__title {
+    color: #fff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    max-width: 196px;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    min-width: 282px;
+    min-height: 50px;
+  }
+
+  .profile__edit-button {
+    margin: 0 0 0 10px;
+    width: 18px;
+    height: 18px;
+    flex-shrink: 0;
+    border: 1px solid #fff;
+  }
+}
