--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,11 +5,10 @@
 
 .footer__copyright {
   width: 318px;
-  height: 18px;
   padding: 67px 0 60px;
   margin: 0;
   color: #545454;
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -25,9 +24,6 @@
   .footer__copyright {
     padding: 48px 0 36px;
     width: 282px;
-    height: 14px;
-    color: #545454;
-    font-family: Inter;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
