--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -28,9 +28,8 @@
   min-height: 50px;
   margin-left: auto;
   padding: 0;
-  border: 2;
-  border-color: #fff;
   border-radius: 2px;
+  border: 2px solid #fff;
 }
 
 .profile__title {
