--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,12 +9,19 @@
 }
 
 @media screen and (max-width: 880px) {
+  .header {
+    margin: 0;
+  }
   .header__image {
     margin-top: 45px;
   }
 }
 
 @media screen and (max-width: 580px) {
+  .header {
+    margin: 0;
+  }
+
   .header__image {
     width: 126px;
     margin: 28px 0 32px 27px;
