--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,6 +22,11 @@
   border: 0;
 }
 
+.profile__edit-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
 .profile__add-button {
   background: transparent url(../images/Vector.svg) center no-repeat;
   min-width: 150px;
@@ -30,6 +35,11 @@
   padding: 0;
   border-radius: 2px;
   border: 2px solid #fff;
+}
+
+.profile__add-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 .profile__title {
@@ -42,6 +52,7 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 373px;
+  font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
 .profile__description {
@@ -55,6 +66,7 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 415px;
+  font-family: Inter, Arial, Helvetica, sans-serif;
 }
 
 .profile__image {
@@ -100,6 +112,9 @@
     text-align: center;
     padding: 14px 0 36px;
     max-width: 282px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
   }
 
   .profile__title {
