--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -127,6 +127,10 @@
     margin: 75px 0 0;
   }
 
+  .modal__input:last-child {
+    margin: 30px 0 0;
+  }
+
   .modal__button {
     width: 238px;
     height: 50.152px;
