--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -77,7 +77,7 @@
   line-height: 16.94px;
 }
 
-.modal__input:last-child {
+.modal__input:last-of-type {
   margin: 30px 0 0;
 }
 
@@ -125,10 +125,6 @@
     width: 238px;
     height: 27px;
     margin: 75px 0 0;
-  }
-
-  .modal__input:last-child {
-    margin: 30px 0 0;
   }
 
   .modal__button {
