--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   list-style: none;
+  position: relative;
 }
 
 .card__image {
@@ -32,15 +33,36 @@
 }
 
 .card__like-button {
-  background: transparent url(../images/like-active.svg) center no-repeat;
+  background: transparent url(../images/like-deactive.svg) center no-repeat;
   height: 18px;
   min-width: 21px;
   margin-left: auto;
   border: 0;
 }
 
+.card__like-button_active {
+  background-image: url(../images/like-active.svg);
+}
+
 .card__like-button:hover {
   opacity: 0.5;
+  cursor: pointer;
+}
+
+.card__remove-button {
+  background: transparent url(../images/Trash.svg);
+  position: absolute;
+  height: 18px;
+  min-width: 19px;
+  border: 0;
+  right: 15px;
+  top: 18px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.card__remove-button:hover {
+  opacity: 0.6;
   cursor: pointer;
 }
 
