--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -6,11 +6,17 @@
   bottom: 0;
   z-index: 999;
   background-color: rgb(0, 0, 0, 0.5);
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 0.6s, opacity 0.6s linear;
 }
 
 .modal--opened {
-  display: flex;
+  /* display: flex; */
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s, opacity 0.6s linear;
 }
 
 .modal__container {
