--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -128,6 +128,12 @@
   position: absolute;
   top: calc(100% + 10px);
   color: #fff;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 @media screen and (max-width: 580px) {
