project 6, completed, 2nd try

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -103,6 +103,10 @@
   opacity: 80%;
   cursor: pointer;
 }
+.modal__close_disabled:hover {
+  opacity: 0.2;
+  cursor: default;
+}
 
 .modal__container_type_preimg {
   display: flex;
