--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -103,9 +103,19 @@
   opacity: 80%;
   cursor: pointer;
 }
-.modal__close_disabled:hover {
-  opacity: 0.2;
+
+.modal__button_disabled {
+  background-color: #fff;
+  color: grey;
+  border: 1px solid grey;
+}
+
+.modal__button_disabled:hover {
+  opacity: 1;
   cursor: default;
+  background-color: #fff;
+  color: grey;
+  border: 1px solid grey;
 }
 
 .modal__container_type_preimg {
@@ -149,12 +159,6 @@
 .modal__input_type_error {
   border-bottom: 1px solid red;
   color: #000;
-}
-
-.modal__close_disabled {
-  background-color: #fff;
-  color: grey;
-  border: 1px solid grey;
 }
 
 @media screen and (max-width: 580px) {
