--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -177,13 +177,14 @@
     width: 238px;
     font-size: 18px;
     line-height: 21.78px;
+    margin: 0 0 10px 0;
   }
 
   .modal__input {
     font-size: 14px;
     width: 238px;
     height: 27px;
-    margin: 75px 0 0;
+    margin: 20px 0 0;
   }
 
   .modal__button {
